# artale-exp-tracker

./: README.md  artale_tracker.spec  entitlements.plist  main.py  pyproject.toml  requirements.txt
.claude-reviews/: review_20260326_135851_d370611.md  review_20260326_142245_d6553fe.md
config/: settings.py
core/: cooldown.py  exp_table.py  ocr.py  tracker.py
ui/: main_window.py  region_selector.py  styles.py  themes.py  toggle_switch.py
