[project]
name = "artale-exp-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.19.0",
    "pynput>=1.8.1",
    "pyobjc-framework-vision>=12.1",
    "pyqt6>=6.10.2",
    "pytesseract>=0.3.13",
]
